# travis-oa-hw

./: .gitignore  .travis.yml  README.md
src/: basicops.h  main.cpp
test/: CMakeLists.txt  tests.cpp
